removed gap between hero image and navbar-fixed-top

--- a/app/assets/stylesheets/vinyls.scss
+++ b/app/assets/stylesheets/vinyls.scss
@@ -23,3 +23,7 @@ h5 {
   width: 100%;
   position: relative;
 }
+
+.navbar-fixed-top {
+  border:0;
+}
